--- a/app/app/index.html
+++ b/app/app/index.html
@@ -7,89 +7,89 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> 
 </head>
 <body>
+  <main>
+    <section class="heading">
+      <h1 class="heading__title">
+        Get your data in RAM. Get compute close to data. Enjoy the performance.
+      </h1>
+      <h2 class="heading__h2">
+        Features:
+      </h2>
 
-  <header class="header">
-    <div class="header__title">
-      <h1>Get your data in RAM. Get compute close to data. Enjoy the performance.</h1>
-    </div>
+      
 
-    <h2 class="title">
-      Features:
-    </h2>
+      <div class="container">
+        <div class="advantages">
+          <div class="advantages__item">
+            <img class="advantages__item__img" src="img/ic-compatibility.svg" alt="ico">
+            <div class="advantages__info">
+              <h2 class="advantages__info__h2">Compatibility</h2>
+              <p class="advantages__info__text">A drop-in replacement for Lua 5.1, based on LuaJIT</p>
+            </div>
+          </div>
+          <div class="advantages__item">
+            <img class="advantages__item__img" src="img/ic-transaction.svg" alt="ico">
+            <div class="advantages__info">
+              <h2 class="advantages__info__h2">Transactions</h2>
+              <p class="advantages__info__text">ACID transactions</p>
+            </div>
+          </div>
+          <div class="advantages__item">
+            <img class="advantages__item__img" src="img/ic-query.svg" alt="ico">
+            <div class="advantages__info">
+              <h2 class="advantages__info__h2">Query language</h2>
+              <p class="advantages__info__text">ANSI SQL, Lua stored procedures and triggers</p>
+            </div>
 
-    <div class="container">
-      <div class="advantages">
-        <div class="advantages__item">
-          <img src="img/ic-compatibility.svg" alt="ico">
-          <div class="advantages__info">
-            <h2>Compatibility</h2>
-            <p>A drop-in replacement for Lua 5.1, based on LuaJIT</p>
           </div>
-        </div>
-        <div class="advantages__item">
-          <img src="img/ic-transaction.svg" alt="ico">
-          <div class="advantages__info">
-            <h2>Transactions</h2>
-            <p>ACID transactions</p>
+          <div class="advantages__item">
+            <img class="advantages__item__img" src="img/ic-extensibility.svg" alt="ico">
+            <div class="advantages__info">
+              <h2 class="advantages__info__h2">Extensibility</h2>
+              <p class="advantages__info__text">Packages for network and file I/O, HTTP, and more</p>
+            </div>
           </div>
-        </div>
-        <div class="advantages__item">
-          <img src="img/ic-query.svg" alt="ico">
-          <div class="advantages__info">
-            <h2>Query language</h2>
-            <p>ANSI SQL, Lua stored procedures and triggers</p>
-          </div>
-
-        </div>
-        <div class="advantages__item">
-          <img src="img/ic-extensibility.svg" alt="ico">
-          <div class="advantages__info">
-            <h2>Extensibility</h2>
-            <p>Packages for network and file I/O, HTTP, and more</p>
-          </div>
-        </div>
-        <div class="advantages__item">
-          <img src="img/ic-security.svg" alt="ico">
-          <div class="advantages__info">
-           <h2>Security</h2>
-           <p>Authentication and access control</p>
+          <div class="advantages__item">
+            <img class="advantages__item__img" src="img/ic-security.svg" alt="ico">
+            <div class="advantages__info">
+             <h2 class="advantages__info__h2">Security</h2>
+             <p class="advantages__info__text">Authentication and access control</p>
+           </div>
          </div>
-       </div>
-       <div class="advantages__item">
-        <img src="img/ic-high-availability.svg" alt="ico">
-        <div class="advantages__info">
-          <h2>High availability</h2>
-          <p>Master-master and shardings</p>
+         <div class="advantages__item">
+          <img class="advantages__item__img" src="img/ic-high-availability.svg" alt="ico">
+          <div class="advantages__info">
+            <h2 class="advantages__info__h2">High availability</h2>
+            <p class="advantages__info__text">Master-master and shardings</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="text-center">
-    <a href="#" class="button">Download <img src="img/ic-btn-download.svg" alt="ico"> </a>
-  </div>
-</header>
+    <div class="text-center">
+      <a href="#" class="button">Download <img class="button__img" src="img/ic-btn-download.svg" alt="ico"> </a>
+    </div>
+  </section>
 
-<main class="dark">
- <section class="problem">
-   <div class="problem__item">
-    <img src="img/ic-bug.svg" alt="ico">
-    <a href="#">Found a bug?</a>
-  </div>
-  <div class="problem__item">
-    <img src="img/ic-question.svg" alt="ico">
-    <a href="#">Have a question?</a>
-  </div>
-  <div class="problem__item">
-    <img src="img/ic-github.svg" alt="ico">
-    <a href="#">Fork us on github</a>
-  </div>
+  <section class="dark">
+   <section class="problem">
+     <div class="problem__item">
+      <img class="problem__item__img" src="img/ic-bug.svg" alt="ico">
+      <a class="problem__item__link" href="#">Found a bug?</a>
+    </div>
+    <div class="problem__item">
+      <img class="problem__item__img" src="img/ic-question.svg" alt="ico">
+      <a class="problem__item__link" href="#">Have a question?</a>
+    </div>
+    <div class="problem__item">
+      <img class="problem__item__img" src="img/ic-github.svg" alt="ico">
+      <a class="problem__item__link" href="#">Fork us on github</a>
+    </div>
+  </section>
 </section>
 </main>
-</main>
-
 </body>
 </html>
